# order-management-be/src/api/validations/user.validations.js
@@ -9,11 +9,6 @@ export const registrationValidation = ( payload ) => {
             phoneNumber: Joi.number().min(10 ** 9).max(10 ** 10 - 1).required(),
             email: Joi.string().email({ minDomainSegments: 2, tlds: { allow: ['com', 'net'] } }),
             password: Joi.string().pattern(new RegExp(/^(?=.*[a-zA-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$/)),
-            addressLine1: Joi.string().required(),
-            addressLine2: Joi.string(),
-            city: Joi.string().required().required(),
-            state: Joi.string().required().required(),
-            zipCode: Joi.string().min(6).max(6).required()
         });
     
         return schema.validate(payload);   
